# uma-dev-pkg

./: .gitignore  CMakeLists.txt  README.md
Arm_Kinova/: CArm.cpp  CArm.h  CCalibration.cpp  CCalibration.h  CKinova.cpp  CKinova.h  CMakeLists.txt  main.cpp
CamControl_ImagingSource/: CMakeLists.txt  CamControl_ImagingSource.cpp  CamControl_ImagingSource.h  SimplePropertyAccess.cpp  SimplePropertyAccess.h  main.cpp
Kinect_Odometry/: CKinect_Odometry_App.cpp  CKinect_Odometry_App.h  CMakeLists.txt  Kinect_Odometry.cpp  Kinect_Odometry.h  main.cpp
Kinect_v1/: CKinect_v1_App.cpp  CKinect_v1_App.h  CMakeLists.txt  main.cpp
MobileRobot_Segway/: CMakeLists.txt  CSegwayApp.cpp  CSegwayApp.h  main.cpp
MobileRobot_Segway/Include/: DtIoctl.h  OLDAAPI.H  OLDADEFS.H  OLDSPTCH.H  OLERRORS.H  Oldacfg.h
MobileRobot_Segway/Lib/: Graph32.exp  Graph32.lib  OLMEM32.exp  OLMEM32.lib  oldaapi32.exp  oldaapi32.lib
RGBDSensorToReactive/: CMakeLists.txt  CRGBD_App.cpp  CRGBD_App.h  main.cpp
SkypeComm_WindowsAPI/: CMakeLists.txt  SkypeComm_winapi.cpp  SkypeComm_winapi.h  main.cpp
TEST_extRGBDSensor/: CMakeLists.txt  CSocketCom.cpp  CSocketCom.h  CextRGBD_App.cpp  CextRGBD_App.h  main.cpp
TunstallEventGrabberApp/: CMakeLists.txt  CTunstallEventGrabberApp.cpp  CTunstallEventGrabberApp.h  TunstallSoprano.h  TunstallSoprano.lib  main.cpp
VirtualCam_Desktop/: CMakeLists.txt  Dll.cpp  Filters.cpp  Filters.def  Filters.h
VirtualCam_Desktop/cmake/modules/: FindDirectShow.cmake
pFaceDetector/: CFaceDetectorApp.cpp  CFaceDetectorApp.h  CMakeLists.txt  main.cpp
pFaceRecognizer/: CFaceRecognizerApp.cpp  CFaceRecognizerApp.h  CMakeLists.txt  main.cpp
pImageGrabber/: CImageGrabberApp.cpp  CImageGrabberApp.h  CMakeLists.txt  main.cpp
pManPublisher/: CMakeLists.txt  CManPublisherApp.cpp  CManPublisherApp.h  main.cpp
