PROJECT(Kinect_Odometry)

# Use MRPT:
FIND_PACKAGE(MRPT REQUIRED slam gui hwdrivers maps graphslam opengl )
FIND_PACKAGE(PCL REQUIRED) 
FIND_PACKAGE(OpenCV REQUIRED )


INCLUDE_DIRECTORIES(${PCL_INCLUDE_DIRS})
LINK_DIRECTORIES(${PCL_LIBRARY_DIRS})
ADD_DEFINITIONS(${PCL_DEFINITIONS})

INCLUDE_DIRECTORIES( ${MOOS_INCLUDE_DIRS}  )
LINK_DIRECTORIES( ${MOOS_LIBRARY_DIRS} )

# Add executable
ADD_EXECUTABLE( ${PROJECT_NAME}
	main.cpp
	CKinect_Odometry_App.cpp
	CKinect_Odometry_App.h
	Kinect_Odometry.cpp
	Kinect_Odometry.h
	)

# Link the executable
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${MOOS_LIBRARIES} ${MRPT_LIBS} 
				   ${PCL_LIBRARIES} 
				   ${OpenCV_LIBS})

