PROJECT(TEST_extRGBDSensor)

# Use MRPT:
FIND_PACKAGE( MRPT REQUIRED slam gui hwdrivers maps graphslam opengl )

FIND_PACKAGE(OpenCV REQUIRED )
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

INCLUDE_DIRECTORIES($ENV{OPENNI2_INCLUDE})
LINK_DIRECTORIES($ENV{OPENNI2_LIB})

INCLUDE_DIRECTORIES( ${MOOS_INCLUDE_DIRS}  )
LINK_DIRECTORIES( ${MOOS_LIBRARY_DIRS} )

# Add executable
ADD_EXECUTABLE( ${PROJECT_NAME}
	main.cpp
	CextRGBD_App.cpp
	CextRGBD_App.h
	CSocketCom.cpp
	CSocketCom.h
	)

	
#Message(Hola ${OpenCV_INCLUDE_DIRS})	
	
# Link the executable
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${MOOS_LIBRARIES} ${MRPT_LIBS}  
				   ${OpenCV_LIBS} $ENV{OPENNI2_LIB}/OpenNI2.lib)

